# gestures-recognition

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
Src/: BinaryHandDetector.cpp  Curvature.cpp  ViBe_plus.cpp  main.cpp
include/: BinaryHandDetector.hpp  CorrectionOfExposition.hpp  Debug.hpp  Hand.h  HandDetector.hpp  Timer.h  ViBe.h  ViBe.hpp  ViBe_plus.h  ViBe_plus.hpp  VideoSequenceCapture.h  denoise.hpp
python/: CMakeLists.txt  Hand.cpp  HandDetector.cpp  exports.hpp  main.cpp  opencv_types.cpp  version.patch
src/: BinaryHandDetector.cpp  Contour.cpp  CorrectionOfExposition.cpp  Curvature.cpp  Debug.cpp  Hand.cpp  HandDetector.cpp  Timer.cpp  ViBe.cpp  ViBe_plus.cpp  deleteNoise.cpp  denoise.cpp
